[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pycdmon"
version = "0.1.1"
description = "Professional Python client for the cdmon Domains & DNS API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pilipilis" }]
keywords = ["cdmon", "domains", "dns", "api-client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Name Service (DNS)",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.11",
]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = []
build_command = "python -m build"
dist_path = "dist/"
upload_to_vcs_release = true
major_on_zero = false
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "conventional"

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_pypi = true

[project.urls]
Homepage = "https://github.com/pilipilis/pycdmon"
Documentation = "https://github.com/pilipilis/pycdmon#readme"
Issues = "https://github.com/pilipilis/pycdmon/issues"

[project.scripts]
cdmon = "pycdmon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pycdmon"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
exclude = ["tests/"]
